# videoai-template-from-flat-image

./: .env.example  .gitignore  pyproject.toml
app/: main.py
app/api/: routes.py
app/models/: schemas.py
app/services/: debug_saver.py  extraction_orchestrator.py  gemini_service.py  gpt_service.py  image_processor.py  polotno_formatter.py
app/templates/: index.html
